--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -31,5 +33,14 @@
   .custom-animation-fade-in {
     animation: move-left 0.2s ease-in; /* 2 seconds duration with ease-in */
     /* Make sure the element can move within its container */
+  }
+
+  .shadow-main {
+    box-shadow:
+      rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
+      rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+  }
+  .shadow-filter {
+    box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 8px;
   }
 }
