--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,41 @@
 @tailwind components;
 @tailwind utilities;
 
+/* width */
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #6699cc;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #333333;
+  border-radius: 5px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #6699cc;
+}
+
 @layer components {
+  @keyframes spin {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+  }
+
+  .loader-custom {
+    animation: spin 1s linear infinite;
+  }
+
   @keyframes move-left {
     0% {
       transform: translateX(100%); /* Start off-screen on the right */
